# padj-code

./: README.md
assignments/: README.md  grading.md  practical_skills_and_fdic_py.md  python_intro.md  python_lists_dicts.md
code/: configure_mac_linux.py
data/: sports_charities_01172024.csv
docs/: getting_help.md  python_projects.md  tech_faq.md  tech_setup.md  tech_setup_git.md  tech_setup_ssh.md
docs/python/: README.md  env_vars.md  remote_files.md  vscode_projects.md
exercises/census/: 01-census-basics.ipynb  02-states-counties.ipynb  Pipfile  README.md  census-python.ipynb  overview.md  pyproject.toml
