[project]
name = "census"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "census",
    "pandas>=2.2.3",
    "us>=3.2.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
census = { workspace = true }
